name:                sql-parser
version:             0.1.0.0
synopsis:            Simple SQL Parser
homepage:            https://github.com/jean-lopes/sql-parser#readme
license:             MIT
license-file:        LICENSE
author:              Jean Carlo Giambastiani Lopes
maintainer:          Jean Carlo Giambastiani Lopes <jean.lopes@hotmail.com.br>
copyright:           2017 Jean Carlo Giambastiani Lopes
category:            Parser
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Sql
                     , Language.Sql.AST
                     , Language.Sql.AST.Tree
                     , Language.Sql.Code                     
                     , Language.Sql.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers 
                     , megaparsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/sql-parser
